packages/python-alpm/python_alpm-0.3.0.tar.gz/python_alpm-0.3.0/alpm-srcinfo/tests/parse_errors/invalid_pkver.srcinfo
pkgbase = test
	# The pkgver is definitely **not** valid
	pkgver = $!@#%1.0.0
	pkgrel = 1

pkgname = test
